--- a/projectindex.html
+++ b/projectindex.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 <title>Project in Bootstrap
@@ -74,14 +73,14 @@
 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
 </div>
 <div class = "col-sm-6 col-md-4 col-lg-4">
-<img src = "images/prod1.jpg">
+<img src = "images/prod1.jpg" style = "height:200px; width = 200px">
 </div>
 <div class = "col-sm-6 col-md-8 col-lg-8">
 <h4>This is a feature title</h4>
 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
 </div>
 <div class = "col-sm-6 col-md-4 col-lg-4">
-<img src = "images/prod2.jpg">
+<img src = "images/prod2.jpg" style = "height:200px; width = 200px">
 </div>
 <div class = "col-sm-6 col-md-8 col-lg-8">
 <h4>This is a feature title</h4>
@@ -91,13 +90,109 @@
 <img src = "images/prod1.jpg" style = "height:200px; width = 200px">
 </div>
 </div>
+<div class = "row">
+<div class = "col-xs-6 col-sm-6 col-md-4 col-lg-4">
+<div class = "panel-default">
+<span class = "glyphicon glyphicon-search"></span>
+<br>
+<div>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+</p>
 </div>
+</div>
+</div>
+<div class = "col-xs-6 col-sm-6 col-md-4 col-lg-4">
+<div class = "panel-default">
+<span class = "glyphicon glyphicon-ok"></span>
+<br>
+<div>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+</p>
+</div>
+</div>
+</div>
+<div class = "col-xs-6 col-sm-6 col-md-4 col-lg-4">
+<div class = "panel-default">
+<span class = "glyphicon glyphicon-time"></span>
+<br>
+<div>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+</p>
+</div>
+</div>
+</div>
+</div>
+<div>
+<h1>
+Subscribe Now for a 30 days free trial
+</h1>
+Enter your name and emailId below
+<form role="form">
+<div class="form-group">
+<input type="name" class="form-control" id="name" placeholder="Name">
+</div>
+<div class="form-group">
+<input type="email" class="form-control" id="email" placeholder="Email">
+</div>
+<button type="submit" class="btn btn-default">Subscribe</button>
+</form>
+</div>
+</div>
+
 <div class= "container-fluid" id ="gallery">
+<h2> Gallery.</h2><cite title="source-title">Take a look at some application screenshots</cite>
+<div class = "carousel slide" data-ride="carousel" id = "abc">
+<ol class="carousel-indicators">
+<li  data-target="#abc" data-slide-to="1" data-slide-to="1"></li>
+<li  data-target="#abc" data-slide-to="2"></li>
+<li  data-target="#abc" data-slide-to="3"></li>
+<li  data-target="#abc" data-slide-to="4"></li>
+<li  data-target="#abc" data-slide-to="5"></li>
+<li class = "active" data-target="#abc" data-slide-to="6"></li>
+<li  data-target="#abc" data-slide-to="7"></li>
+<li  data-target="#abc" data-slide-to="8"></li>
+</ol>
 
+<div class = "carousel-inner">
+<div class = "item"><img class = "center-block"src = "../images/har.jpg"><div class = "carousel-caption">ALPHA</div></div>
+<div class = "item"><img class = "center-block"src = "../images/har1.jpg"><div class = "carousel-caption">BETA</div></div>
+<div class = "item"><img class = "center-block"src = "../images/har2.jpg"><div class = "carousel-caption">GAMMA</div></div>
+<div class = "item"><img class = "center-block"src = "../images/har3.jpg"><div class = "carousel-caption">DELTA</div></div>
+<div class = "item"><img class = "center-block"src = "../images/har4.jpg"><div class = "carousel-caption">PHI</div></div>
+<div class = "item"><img class = "center-block"src = "../images/har5.jpg"><div class = "carousel-caption">SIGMA</div></div>
+<div class = "item active"><img class = "center-block"src = "../images/har6.jpg"><div class = "carousel-caption">UNDERSEN</div></div>
+<div class = "item"><img class = "center-block"src = "../images/har7.jpg"><div class = "carousel-caption">GAMMA</div></div>
+<a class="carousel-control left" data-slide="prev" href="#abc"><span class= "glyphicon glyphicon-backward"></span></a>
+<a class="carousel-control right" data-slide="next" href= "#abc"><span class= "glyphicon glyphicon-forward"></span></a>
 </div>
+</div>
+</div>
+</div>
+
 <div class= "container-fluid" id ="faq">
+<h2> Frequently Asked Questions.</h2><cite title="source-title">A little Q&A to get you started</cite>
+<ul class="nav nav-tabs nav-justified">
+  <li class = "active"><a href ="#a" data-toggle="tab">HOME</a></li>
+  <li><a href ="#l"data-toggle="tab">COURSES</a></li>
+  <li><a href ="#o"data-toggle="tab">STUDENTS</a></li>
+  <li><a href ="#y"data-toggle="tab">JOBS</a></li>
+  <li><a href ="#s"data-toggle="tab">CAREERS</a></li>
+</ul>
+<div class = "tab-content">
+<div class = "tab-pane active" id = "a">ABOUT US<br>
 
 </div>
+<div class = "tab-pane" id="l">BETA<br><img src="../images/har1.jpg" height = "800px" width="1050px"></div>
+<div class = "tab-pane" id="o">GAMMA<br><img src="../images/har2.jpg" height = "800px" width="1050px"></div>
+<div class = "tab-pane" id="y">DELTA<br><img src="../images/har3.jpg" height = "800px" width="1050px"></div>
+<div class = "tab-pane" id="s">THETA<br><img src="../images/har4.jpg" height = "800px" width="1050px"></div>
+<div class = "tab-pane" id="r">PHI<br><img src="../images/har5.jpg" height = "800px" width="1050px"></div>
+</div>
+</div>
+
 <div class= "container-fluid" id ="contact">
 
 </div>
