--- a/projectindex.html
+++ b/projectindex.html
@@ -87,7 +87,28 @@
 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
 </div>
 <div class = "col-sm-6 col-md-4 col-lg-4">
-<img src = "images/prod1.jpg" style = "height:200px; width = 200px">
+<img src = "images/prod3.jpg" style = "height:200px; width = 200px">
+</div>
+<div class = "col-sm-6 col-md-8 col-lg-8">
+<h4>This is a feature title</h4>
+<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+</div>
+<div class = "col-sm-6 col-md-4 col-lg-4">
+<img src = "images/prod4.jpg" style = "height:200px; width = 200px">
+</div>
+<div class = "col-sm-6 col-md-8 col-lg-8">
+<h4>This is a feature title</h4>
+<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+</div>
+<div class = "col-sm-6 col-md-4 col-lg-4">
+<img src = "images/prod5.jpg" style = "height:200px; width = 200px">
+</div>
+<div class = "col-sm-6 col-md-8 col-lg-8">
+<h4>This is a feature title</h4>
+<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+</div>
+<div class = "col-sm-6 col-md-4 col-lg-4">
+<img src = "images/prod6.jpg" style = "height:200px; width = 200px">
 </div>
 </div>
 <div class = "row">
@@ -157,14 +178,14 @@ Enter your name and emailId below
 </ol>
 
 <div class = "carousel-inner">
-<div class = "item"><img class = "center-block"src = "../images/har.jpg"><div class = "carousel-caption">ALPHA</div></div>
-<div class = "item"><img class = "center-block"src = "../images/har1.jpg"><div class = "carousel-caption">BETA</div></div>
-<div class = "item"><img class = "center-block"src = "../images/har2.jpg"><div class = "carousel-caption">GAMMA</div></div>
-<div class = "item"><img class = "center-block"src = "../images/har3.jpg"><div class = "carousel-caption">DELTA</div></div>
-<div class = "item"><img class = "center-block"src = "../images/har4.jpg"><div class = "carousel-caption">PHI</div></div>
-<div class = "item"><img class = "center-block"src = "../images/har5.jpg"><div class = "carousel-caption">SIGMA</div></div>
-<div class = "item active"><img class = "center-block"src = "../images/har6.jpg"><div class = "carousel-caption">UNDERSEN</div></div>
-<div class = "item"><img class = "center-block"src = "../images/har7.jpg"><div class = "carousel-caption">GAMMA</div></div>
+<div class = "item"><img class = "center-block"src = "images/har.jpg"><div class = "carousel-caption">ALPHA</div></div>
+<div class = "item"><img class = "center-block"src = "images/har1.jpg"><div class = "carousel-caption">BETA</div></div>
+<div class = "item"><img class = "center-block"src = "images/har2.jpg"><div class = "carousel-caption">GAMMA</div></div>
+<div class = "item"><img class = "center-block"src = "images/har3.jpg"><div class = "carousel-caption">DELTA</div></div>
+<div class = "item"><img class = "center-block"src = "images/har4.jpg"><div class = "carousel-caption">PHI</div></div>
+<div class = "item"><img class = "center-block"src = "images/har5.jpg"><div class = "carousel-caption">SIGMA</div></div>
+<div class = "item active"><img class = "center-block"src = "images/har6.jpg"><div class = "carousel-caption">UNDERSEN</div></div>
+<div class = "item"><img class = "center-block"src = "images/har7.jpg"><div class = "carousel-caption">GAMMA</div></div>
 <a class="carousel-control left" data-slide="prev" href="#abc"><span class= "glyphicon glyphicon-backward"></span></a>
 <a class="carousel-control right" data-slide="next" href= "#abc"><span class= "glyphicon glyphicon-forward"></span></a>
 </div>
@@ -185,11 +206,12 @@ Enter your name and emailId below
 <div class = "tab-pane active" id = "a">ABOUT US<br>
 
 </div>
-<div class = "tab-pane" id="l">BETA<br><img src="../images/har1.jpg" height = "800px" width="1050px"></div>
-<div class = "tab-pane" id="o">GAMMA<br><img src="../images/har2.jpg" height = "800px" width="1050px"></div>
-<div class = "tab-pane" id="y">DELTA<br><img src="../images/har3.jpg" height = "800px" width="1050px"></div>
-<div class = "tab-pane" id="s">THETA<br><img src="../images/har4.jpg" height = "800px" width="1050px"></div>
-<div class = "tab-pane" id="r">PHI<br><img src="../images/har5.jpg" height = "800px" width="1050px"></div>
+<div class = "tab-pane" id="l">BETA<br><img src="images/har1.jpg" height = "800px" width="1050px"></div>
+<div class = "tab-pane" id="o">GAMMA<br><img src="images/har2.jpg" height = "800px" width="1050px"></div>
+<div class = "tab-pane" id="y">DELTA<br><img src="images/har3.jpg" height = "800px" width="1050px"></div>
+<div class = "tab-pane" id="s">THETA<br><img src="images/har4.jpg" height = "800px" width="1050px"></div>
+<div class = "tab-pane" id="r">PHI<br><img src="images/har5.jpg" height = "800px" width="1050px"></div>
+
 </div>
 </div>
 
